--- a/vue/vue_demo/package.json
+++ b/vue/vue_demo/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
@@ -26,6 +27,7 @@
     "@playwright/test": "^1.57.0",
     "@tsconfig/node24": "^24.0.3",
     "@types/jsdom": "^27.0.0",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
