--- a/vue/vue_demo/package.json
+++ b/vue/vue_demo/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "pinia": "^3.0.4",
+    "react-window": "^2.2.5",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
